Fix some test after authentication implementation